# DAT-AWS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  apt-packages.txt  docker-compose.yml  nginx.conf  pyproject.toml  supervisord.conf
.cursor/: rules.json
.cursor/rules/: fastapi.mdc  streamlit.mdc
.github/workflows/: db-migration.yml  deploy.yml
backend/: README.md  main.py
backend/app/configs/: database.py  env_configs.py
backend/app/controllers/: auth_controller.py  diagnosis_record_controller.py  diagnosis_web_controller.py  diagnosis_ws_controller.py  mock_client_controller.py  patient_controller.py
backend/app/core/: templating.py  ws_connection_manager.py
backend/app/dependency/: dependency.py
backend/app/dtos/: auth_dto.py  diagnosis_dto.py  doctor_dto.py  patient_dto.py  user_dto.py
backend/app/middleware/: user_agent_middleware.py
backend/app/models/: base_model.py  diagnosis.py  doctor.py  patient.py  token.py  user.py
backend/app/repositories/: diagnosis_repository.py  doctor_repository.py  patient_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: auth_schema.py  diagnosis_schema.py  patient_schema.py  ws_schema.py
backend/app/services/: auth_service.py  diagnosis_password_manager.py  diagnosis_result_process.py  diagnosis_service.py  doctor_service.py  patient_service.py  s3_service.py
backend/app/utils/: __init__.py  time.py  util.py
backend/docs/: api.md  draw_erd.py  s3.md  websocket_api_docs.json
backend/migrations/: env.py  reset_db.py
backend/migrations/versions/: b6e30fbd6762_init_db.py
backend/templates/: mock_vr_client.html
backend/tests/: test_time.py  test_user_agent_middleware.py
backend/tests/api_integration/: conftest.py  test_auth.py  test_diagnosis.py  test_patient.py  utils.py
frontend/: README.md
frontend/.streamlit/: config.toml
frontend/assets/css/: main_header.css  navigation.css  (+1 more)
frontend/src/: config.py  main.py  state.py
scripts/: README.md  rds-connect.sh  rds-disconnect.sh
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  version.tf
(+66 files in other folders)
